--- a/index.html
+++ b/index.html
@@ -1,229 +1,238 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=\, initial-scale=1.0" />
+    <link href="/b60ca28898-fontawesome/css/fontawesome.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/b60ca28898.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- <link rel="stylesheet" href="./css/main.css" /> -->
+    <link rel="stylesheet" href="stylePerdarau.css" />
+    <title>Praktikos darbas su Tieto</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=\, initial-scale=1.0" />
-  <link href="/b60ca28898-fontawesome/css/fontawesome.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/b60ca28898.js" crossorigin="anonymous"></script>
-  <!-- <link rel="stylesheet" href="./css/main.css" /> -->
-  <link rel="stylesheet" href="stylePerdarau.css">
-  <title>Praktikos darbas su Tieto</title>
-</head>
+  <body>
+    <!-- ---------------------------------------------------- -->
+    <!--     1.                  SLIDER                       -->
+    <!-- ---------------------------------------------------- -->
 
-<body>
-  <!-- ------------------------------------------------------- -->
-  <!--                      ARTICLE                            -->
-  <!-- ------------------------------------------------------- -->
+    <div class="slider">
+      <!-- -------------------------------------------------- -->
+      <!--               "Dogs have a sense of time"          -->
+      <!-- -------------------------------------------------- -->
 
-  <!-- <article>
-      <img class="title" src="img/title.svg" alt="antraste" />
-    </article> -->
-
-  <!-- ------------------------------------------------------- -->
-  <!--                        HEADER                           -->
-  <!-- ------------------------------------------------------- -->
-
-  <!-- <header> -->
-
-  <!-- <img class="logo" src="img/logo.svg" alt="suns logo" /> -->
-
-  <!-- ---------------------------------------------------- -->
-  <!--                         NAV                          -->
-  <!-- ---------------------------------------------------- -->
-
-  <!-- <a href="#" class="nav__link">Sign In</a>
-      <a href="#" class="nav__link">Open App</a>
-      <a href="#" class="nav__link">Unsubscribe</a> -->
-
-  <!-- <div class="faktai"> -->
-
-  <!-- </div> -->
-
-  <!-- </header> -->
-
-  <!-- ---------------------------------------------------- -->
-  <!--     1.                  SLIDER                       -->
-  <!-- ---------------------------------------------------- -->
-
-  <div class="slider">
-    <!-- -------------------------------------------------- -->
-    <div class="slide current">
-      <div class="content">
-        <img class="faktai" src="img/faktai1.svg" alt="pirmas" />
+      <div class="slide current">
+        <div class="content">
+          <img class="faktai" src="img/faktai1.svg" alt="pirmas:" />
+        </div>
       </div>
+
+      <!-- -------------------------------------------------- -->
+      <!--    2. The United States has the highest ...        -->
+      <!-- -------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img class="faktai" src="img/faktai2.svg" alt="antras: Sofa" />
+        </div>
+      </div>
+
+      <!-- ---------------------------------------------------- -->
+      <!--    3.  Puppies have 28 teeth and adult dogs has 42   -->
+      <!-- ---------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai14.svg"
+            alt="trečias: Pašto dėžutė"
+          />
+        </div>
+      </div>
+
+      <!-- -------------------------------------------------------------- -->
+      <!--    4.  Labradors have been the most popular breed in the ...   -->
+      <!-- -------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai4.svg"
+            alt="ketvirtas: Labradoras"
+          />
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------ -->
+      <!--    5. The Saluki is the world  oldest's dog breed. They appear ... -->
+      <!-- ------------------------------------------------------------------ -->
+
+      <div class="slide">
+        <div class="content">
+          <img class="faktai" src="img/faktai5.svg" alt="penktas: Puodukas" />
+        </div>
+      </div>
+
+      <!-- ---------------------------------------------------------------- -->
+      <!--    6.  Your dog is as smart as a two-year old!                   -->
+      <!-- ---------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img class="faktai" src="img/faktai6.svg" alt="šeštas: Tropikai" />
+        </div>
+      </div>
+
+      <!-- --------------------------------------------------------------- -->
+      <!--    7.  Big happy "helicopter" tail wagging  is one sign of ...  -->
+      <!-- --------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img class="faktai" src="img/faktai9.svg" alt="septintas: Žiema" />
+        </div>
+      </div>
+
+      <!-- --------------------------------------------------------------- -->
+      <!--    8.  There arre about 400 million  dogs in the world.         -->
+      <!-- --------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai19.svg"
+            alt="aštuntas: Du draugai"
+          />
+        </div>
+      </div>
+
+      <!-- ---------------------------------------------------------------- -->
+      <!--    9.  Dogs can learn more than 1000 words.                      -->
+      <!-- ---------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai18.svg"
+            alt="devintas: Vilkšunis"
+          />
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------ -->
+      <!--    10. dogs can be taught to count and solve simple math problems. -->
+      <!-- ------------------------------------------------------------------ -->
+
+      <div class="slide">
+        <div class="content">
+          <img class="faktai" src="img/faktai20.svg" alt="dešimtas: Maudynės" />
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------ -->
+      <!--    11.  The average dog lives 10 to 14 years.                      -->
+      <!-- ------------------------------------------------------------------ -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai11.svg"
+            alt="vienuoliktas: Ausys"
+          />
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------ -->
+      <!--    12.  Petting a dog can lower your blood pressure.               -->
+      <!-- ------------------------------------------------------------------ -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai12.svg"
+            alt="dvyliktas: Skaito knygą"
+          />
+        </div>
+      </div>
+
+      <!-- ----------------------------------------------------------------- -->
+      <!--    11. Dahshunds were originally bred to fight badgers.           -->
+      <!-- ----------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img class="faktai" src="img/faktai3.svg" alt="tryliktas: Miegas" />
+        </div>
+      </div>
+
+      <!-- ----------------------------------------------------------------------- -->
+      <!--   12. Puppies can sleep 18 to 20 hours a day during that rapid body ... -->
+      <!-- ----------------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai"
+            src="img/faktai17.svg"
+            alt="keturioliktas: Mažylis"
+          />
+        </div>
+      </div>
+
+      <!-- -------------------------------------------------------------------- -->
+      <!--    13. Dogs are omnivores -- they eat meat, grains and vegetables.   -->
+      <!-- -------------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai6"
+            src="img/faktai16.svg"
+            alt="penkioliktas: Kareivis ir šuo"
+          />
+        </div>
+      </div>
+
+      <!-- ------------------------------------------------------------------- -->
+      <!--    14.  Puppies grow to half their body weight in the first four .. -->
+      <!-- ------------------------------------------------------------------- -->
+
+      <div class="slide">
+        <div class="content">
+          <img
+            class="faktai6"
+            src="img/faktai15.svg"
+            alt="šešioliktas: Kalnų ežeras"
+          />
+        </div>
+      </div>
+
+      <!-- ----------------------------------- -->
+      <!--                                     -->
+      <!-- ----------------------------------- -->
     </div>
 
-    <!-- ----------------------------------- -->
-    <!--    2.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai2.svg" alt="antras sofa" />
-      </div>
+    <div class="buttons">
+      <button id="prev">
+        <i class="fas fa-angle-double-left fa-2x"></i>
+      </button>
+      <button id="next">
+        <i class="fas fa-angle-double-right fa-2x"></i>
+      </button>
     </div>
 
-    <!-- ----------------------------------- -->
-    <!--    3.                               -->
-    <!-- ----------------------------------- -->
+    <!-- ------------------------------------------------------- -->
+    <!--                         MAIN                            -->
+    <!-- ------------------------------------------------------- -->
 
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai14.svg" alt="trecias pasto dezute" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    4.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai4.svg" alt="ketvirtas labradoras" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    5.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai5.svg" alt="penktas puodukas" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    6.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai6.svg" alt="sestas tropikai" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    7.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai9.svg" alt="septintas ziema" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    8.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai19.svg" alt="astuntas du draugai" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    9.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai18.svg" alt="devintas vilksunis" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    10.                              -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai20.svg" alt="desimtas maudynes" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    11.                               -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai11.svg" alt="vienuoliktas ausys" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    12.                              -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai12.svg" alt="dvyliktas akiniai" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    11.                              -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai3.svg" alt="tryliktas miegas" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    12.                              -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai" src="img/faktai17.svg" alt="keturioliktas mazylis" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    13.                              -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai6" src="img/faktai16.svg" alt="penkioliktas kareivis ir suo" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--    14.                              -->
-    <!-- ----------------------------------- -->
-
-    <div class="slide">
-      <div class="content">
-        <img class="faktai6" src="img/faktai15.svg" alt="sesioliktas kalnu ezeras" />
-      </div>
-    </div>
-
-    <!-- ----------------------------------- -->
-    <!--                                     -->
-    <!-- ----------------------------------- -->
-  </div>
-
-  <div class="buttons">
-    <button id="prev">
-      <i class="fas fa-angle-double-left fa-2x"></i>
-    </button>
-    <button id="next">
-      <i class="fas fa-angle-double-right fa-2x"></i>
-    </button>
-  </div>
-
-  <!-- ------------------------------------------------------- -->
-  <!--                         MAIN                            -->
-  <!-- ------------------------------------------------------- -->
-
-
-  <script src="main.js"></script>
-</body>
-
+    <script src="main.js"></script>
+  </body>
 </html>
