--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
 
       <!-- ------------------------------------------------------------------ -->
-      <!--    10. dogs can be taught to count and solve simple math problems. -->
+      <!--    10. Dogs can be taught to count and solve simple math problems. -->
       <!-- ------------------------------------------------------------------ -->
 
       <div class="slide">
