--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <div class="slide">
         <div class="content">
           <img
-            class="faktai6"
+            class="faktai"
             src="img/faktai16.svg"
             alt="penkioliktas: Kareivis ir šuo"
           />
@@ -208,7 +208,7 @@
       <div class="slide">
         <div class="content">
           <img
-            class="faktai6"
+            class="faktai"
             src="img/faktai15.svg"
             alt="šešioliktas: Kalnų ežeras"
           />
